Fix CORS: Update FRONTEND_URL to production

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ REFRESH_TOKEN_SECRET=your-refresh-token-secret-change-this-in-production
 REFRESH_TOKEN_EXPIRE=30d
 
 # Frontend URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://frontend-five-rho-75.vercel.app
 
 # OpenAI Configuration (Optional)
 # OPENAI_API_KEY=your-openai-api-key-here
